Registration of parents and teachers implemented.

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -200,7 +200,8 @@
         <app-loader></app-loader>
         } @else {
         <div class="form-btn">
-            <button class="red-btn" type="submit" [disabled]="isRegisterFormInvalid">Register</button>
+            <!-- [disabled]="isRegisterFormInvalid" -->
+            <button class="red-btn" type="submit" >Register</button>
         </div>
         }
     </form>
