--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 :root {
     --black: #000000;
     --light-cold-gray: #f7f9fc;
