--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -34,7 +34,7 @@
                                 <a href="#" class="dropdown-btn underline">Subjects</a>
                                 <div class="dropdown-content">
                                     <a href="#">My Subjects</a>
-                                    <a href="#">Create Subject</a>
+                                    <a href="javascript:void(0)" routerLink="/create-subject">Create Subject</a>
                                     <a href="#">All Subjects</a>
                                 </div>
                             </div>
