--- a/src/styles.css
+++ b/src/styles.css
@@ -181,3 +181,13 @@ select.false-input {
         }
     }
 }
+
+.no-results {
+    padding: 100px 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    font-size: var(--size-mid-title);
+    font-weight: bold;
+    color: var(--dim-gray);
+}
